--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>Acacia Resort</h1>
-    <img src="Acacia.jpg">
+    <img src="Logo.jpg">
+
     <h2>Peak of the Savannah</h2>
 
     <p>Located in the Heart of the Tsavo</p>
