--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Acacia Resort</h1>
     <img src="Logo.jpg">
 
-    <h2>Peak of the Savannah</h2>
+    <h2>WELCOME</h2>
 
     <p>Located in the Heart of the Tsavo</p>
     <p>Welcome to <strong>our first webpage!</strong></p>
