--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Acacia Resort</h1>
+  <h1>Acacia Resort</h1>
+
+  <div class="Introduction">
     <img src="Logo.jpg">
-
-    <h2>WELCOME</h2>
-
-    <p>Located in the Heart of the Tsavo</p>
-    <p>Welcome to <strong>our first webpage!</strong></p>
-    <p>Here are something i am going to learn about coding;</p>
-      <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>And a lot more</li>
-      </ol>
   </body>
-</p>check out <a href="http://moringaschool.com/">Moringa School</a>. it's agreat place to learn wed development skills!</p>
-<p>Here is a link to my <a href="my-favorite-things.html">my favorite things</a>.</p>
+  <div class="sidebar">
+        <ul>
+          <li><a href="http://moringaschool.com">ACCOMMODATIONS</a></li>
+          <li>ACTIVITIES</li>
+          <li>TRAVEL ARRANGEMENTS</li>
+          <li>GALLERY</li>
+        </ul>
+  </div>
+</p>Contact: info@acaciaresort.com for more information</p>
 </html>
