--- a/activities.html
+++ b/activities.html
@@ -2,30 +2,35 @@
 <html>
   <head>
     <title>ACTIVITIES</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <link href="css/style.css" rel="stylesheet">
   </head>
     <body>
       <header>
+
         <img src="https://farm1.staticflickr.com/347/18513954194_6e47a747b8_b.jpg" alt="">
-        <p>:
-          <ul>
-            <li>Sport and physical recreation</li>
-            <li>Solo activities – gym or swimming</li>
-            <li>Group activities – team games</li>
-            <li>Arts and entertainment</li>
-            <li>Theatre</li>
-            <li>Gigs and concerts</li>
-            <li>Comedy clubs</li>
-            <li>Films</li>
-            <li>Countryside recreation</li>
-            <li>Hiking</li>
-            <li>Camping</li>
-            <li>Picnics</li>
-            <li>Cycling</li>
-            <li>Youth hostelling</li>
-            <li>Horse riding</li>
-          </ul>
-        </p>
+
+          <div class="well">
+
+            <ul>
+              <li>Sport and physical recreation</li>
+              <li>Solo activities – gym or swimming</li>
+              <li>Group activities – team games</li>
+              <li>Arts and entertainment</li>
+              <li>Theatre</li>
+              <li>Gigs and concerts</li>
+              <li>Comedy clubs</li>
+              <li>Films</li>
+              <li>Countryside recreation</li>
+              <li>Hiking</li>
+              <li>Camping</li>
+              <li>Picnics</li>
+              <li>Cycling</li>
+              <li>Youth hostelling</li>
+              <li>Horse riding</li>
+            </ul>
+          </div>
+
       </header>
 
       </body>
