--- a/index.html
+++ b/index.html
@@ -2,24 +2,31 @@
 <html>
   <head>
     <title>Acacia Resorts</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link href="css/styles.css" rel="stylesheet">
+
   </head>
   <body>
 
-    <header>
+    <div class="container">
+      <div class="well">
+        <h1>Acacia Resort</h1>
+        <p>Set on the peaceful backwaters of Tsavo, the Acacia Resort welcomes guests with a beautiful outdoor pool which overlooks the lake. Elegant cottages boasts a private hot tub for guests to relax in.Offering an outdoor concept, the resort Restaurant serves Indian and continental dishes. Guests can also enjoy alcoholic drinks at the bar. Offering an outdoor concept, the resort Restaurant serves Indian and continental dishes. Guests can also enjoy alcoholic drinks at the bar. Guests can select from various spa treatments and utilize the business centre. The Resort also offers laundry services and luggage storage space. Excursions and nature treks can be arranged at the tour desk.The rooms are extremely comfortable, equipped with warm and precious materials and personalized with authentic antiques expertly chosen one by one in the many markets of Tuscany.
+        This passion for detail contributes to the intimate, tranquil atmosphere which transforms each room into a pleasant refuge within the bustling city of Florence, in a place where guests can relax after a day spent touring and admiring the many beautiful artistic and architectural sites in the city which cradled the Renaissance.
+        Each bedroom has  been individually designed in a fresh  concept mixing tradition, precious fabrics, period furnitures, italian vintage design, original photos, prints and paintings.
+        Rooms  are light and comfortable and well appointed with a writing desk, wireless internet access and flat screen TV's.  Rooms overlooking the front have double soundproof windows.</p>
 
-      <img src="../images/Logo.jpg">
-    </header>
+
+      <ul>
+        <li> <a href="accomodations.html">ACCOMMODATIONS</a> </li>
+        <li> <a href="activities.html">ACTIVITIES</a></li>
+        <li> <a href="travel.html">TRAVEL ARRANGEMENTS</a> </li>
+      </ul>
+
+      </div>
+    </div>
 
   </body>
-<p>Set on the peaceful backwaters of Tsavo, the Acacia Resort welcomes guests with a beautiful outdoor pool which overlooks the lake. Elegant cottages boasts a private hot tub for guests to relax in.Offering an outdoor concept, the resort Restaurant serves Indian and continental dishes. Guests can also enjoy alcoholic drinks at the bar. Offering an outdoor concept, the resort Restaurant serves Indian and continental dishes. Guests can also enjoy alcoholic drinks at the bar. Guests can select from various spa treatments and utilize the business centre. The Resort also offers laundry services and luggage storage space. Excursions and nature treks can be arranged at the tour desk.The rooms are extremely comfortable, equipped with warm and precious materials and personalized with authentic antiques expertly chosen one by one in the many markets of Tuscany.
-This passion for detail contributes to the intimate, tranquil atmosphere which transforms each room into a pleasant refuge within the bustling city of Florence, in a place where guests can relax after a day spent touring and admiring the many beautiful artistic and architectural sites in the city which cradled the Renaissance.
-Each bedroom has  been individually designed in a fresh  concept mixing tradition, precious fabrics, period furnitures, italian vintage design, original photos, prints and paintings.
-Rooms  are light and comfortable and well appointed with a writing desk, wireless internet access and flat screen TV's.  Rooms overlooking the front have double soundproof windows.</p>
-<ul>
-  <li> <a href="accomodations.html">ACCOMMODATIONS</a> </li>
-  <li> <a href="activities.html">ACTIVITIES</a></li>
-  <li> <a href="travel.html">TRAVEL ARRANGEMENTS</a> </li>
-</ul>
+
 
 </html>
