--- a/accomodations.html
+++ b/accomodations.html
@@ -2,27 +2,37 @@
 <html>
   <head>
     <title>Acacia Resorts</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link href="css/room.css" rel="stylesheet">
   </head>
 
   <body>
 
-    <header>
+    <div class="container">
+
+
     <img src="https://margauxsharesdelicious.files.wordpress.com/2014/12/margauxlicious-raffles-collage-1-rooms.jpg">
+<div class="well">
+
+
 <p>The rooms are extremely comfortable, equipped with warm and precious materials and personalized with authentic antiques expertly chosen one by one in the many markets of Tuscany.
 This passion for detail contributes to the intimate, tranquil atmosphere which transforms each room into a pleasant refuge, in a place where guests can relax after a day spent touring and admiring the many beautiful landscapes which cradled the Renaissance.
 Each bedroom has  been individually designed in a fresh  concept mixing tradition, precious fabrics, period furnitures, Maasai vintage design, original photos, prints and paintings.
 Rooms  are light and comfortable and well appointed with a writing desk, wireless internet access and flat screen TV's.  Rooms overlooking the front have double soundproof windows.</p>
+</div>
+</div>
+<div class="well">
+  <div class="columns">
 
-      <div class="columns">
+  <h2><strong>Single Room</strong></h2>
+  Single Bed, 110/130 cm SLEEPS 1. Individual Design / Cotton sateen sheets. Double pillows / Soundproof windows. Ensuite bathroom with shower or bathtub (please request at time of booking). Air Conditioning / Free WIFI Internet. FLAT SCREEN TV / SATELLITE TV. Bathroom Amenities / Hairdryer.Air Conditioning / Free Internet Access
 
-      <h2><strong>Single Room</strong></h2>
-      Single Bed, 110/130 cm SLEEPS 1. Individual Design / Cotton sateen sheets. Double pillows / Soundproof windows. Ensuite bathroom with shower or bathtub (please request at time of booking). Air Conditioning / Free WIFI Internet. FLAT SCREEN TV / SATELLITE TV. Bathroom Amenities / Hairdryer.Air Conditioning / Free Internet Access
+  <h2><strong>Double Room</strong></h2>
+  Individual Design / Sleeps one. Single Bed, queen or European king size. Cotton sateen sheets / Double pillows. Soundproof windows / Free WIFI Internet. Ensuite bathroom with shower or bathtub (please request at time of booking). FLAT SCREEN TV / SATELLITE TV. Minibar – Fridge Bar / Bathroom Amenities. Hairdryer / Air Conditioning / Free Internet Access
+  </div>
+</div>
 
-      <h2><strong>Double Room</strong></h2>
-      Individual Design / Sleeps one. Single Bed, queen or European king size. Cotton sateen sheets / Double pillows. Soundproof windows / Free WIFI Internet. Ensuite bathroom with shower or bathtub (please request at time of booking). FLAT SCREEN TV / SATELLITE TV. Minibar – Fridge Bar / Bathroom Amenities. Hairdryer / Air Conditioning / Free Internet Access
-      </div>
-  </header>
+
 </body>
 
 </html>
