--- a/activities.html
+++ b/activities.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <title>ACTIVITIES</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link href="css/style.css" rel="stylesheet">
   </head>
     <body>
-      <header>
+
 
         <img src="https://farm1.staticflickr.com/347/18513954194_6e47a747b8_b.jpg" alt="">
 
           <div class="well">
+            <h1>Activities</h1>
 
             <ul>
               <li>Sport and physical recreation</li>
@@ -31,7 +32,6 @@
             </ul>
           </div>
 
-      </header>
 
       </body>
     </html>
